extension/partiql-extension-ion/tests/snapshots/test__nulls_neq_nans_eq_SingleTlvText.snap
---
source: extension/partiql-extension-ion/tests/test.rs
expression: "dump_eq::<false, true>(fmt)"
---
`nan` = `nan` → true
`-inf` = `-inf` → true
`+inf` = `+inf` → true
`'null'` = `'null'` → true
`'null.int'` = `'null.int'` → true
`true` = `true` → true
`false` = `false` → true
`0` = `0` → true
`0` = `0` → true
`0` = `0` → true
`0` = `0` → true
`123` = `123` → true
`123` = `123` → true
`-123` = `-123` → true
`48879` = `48879` → true
`5` = `5` → true
`123` = `123` → true
`123` = `123` → true
`64206` = `64206` → true
`42` = `42` → true
`_1` = `_1` → true
`0.123` = `0.123` → true
`-1.2e3` = `-1.2e3` → true
`-12d2` = `-12d2` → true
`0e0` = `0e0` → true
`0e0` = `-0e0` → true
`0.` = `0.` → true
`0.` = `0.` → true
`0.` = `-0.` → true
`0.` = `-0.` → true
`0.` = `-0.0` → true
`0.` = `0.` → true
`0.` = `0.` → true
`0.` = `-0.` → true
`0.` = `-0.` → true
`0.` = `-0.0` → true
`-0e0` = `0e0` → true
`-0e0` = `-0e0` → true
`-0.` = `0.` → true
`-0.` = `0.` → true
`-0.` = `-0.` → true
`-0.` = `-0.` → true
`-0.` = `-0.0` → true
`-0.` = `0.` → true
`-0.` = `0.` → true
`-0.` = `-0.` → true
`-0.` = `-0.` → true
`-0.` = `-0.0` → true
`-0.0` = `0.` → true
`-0.0` = `0.` → true
`-0.0` = `-0.` → true
`-0.0` = `-0.` → true
`-0.0` = `-0.0` → true
`123456.789012` = `123456.789012` → true
`2007-02-23T12:14+00:00` = `2007-02-23T12:14+00:00` → true
`2007-02-23T12:14:33.079-08:00` = `2007-02-23T12:14:33.079-08:00` → true
`2007-02-23T12:14:33.079-08:00` = `2007-02-23T20:14:33.079+00:00` → true
`2007-02-23T12:14:33.079-08:00` = `2007-02-23T20:14:33.079+00:00` → true
`2007-02-23T12:14:33.079-08:00` = `2007-02-23T20:14:33.079-00:00` → true
`2007-02-23T20:14:33.079+00:00` = `2007-02-23T12:14:33.079-08:00` → true
`2007-02-23T20:14:33.079+00:00` = `2007-02-23T20:14:33.079+00:00` → true
`2007-02-23T20:14:33.079+00:00` = `2007-02-23T20:14:33.079+00:00` → true
`2007-02-23T20:14:33.079+00:00` = `2007-02-23T20:14:33.079-00:00` → true
`2007-02-23T20:14:33.079+00:00` = `2007-02-23T12:14:33.079-08:00` → true
`2007-02-23T20:14:33.079+00:00` = `2007-02-23T20:14:33.079+00:00` → true
`2007-02-23T20:14:33.079+00:00` = `2007-02-23T20:14:33.079+00:00` → true
`2007-02-23T20:14:33.079+00:00` = `2007-02-23T20:14:33.079-00:00` → true
`2007-02-23T20:14:33.079-00:00` = `2007-02-23T12:14:33.079-08:00` → true
`2007-02-23T20:14:33.079-00:00` = `2007-02-23T20:14:33.079+00:00` → true
`2007-02-23T20:14:33.079-00:00` = `2007-02-23T20:14:33.079+00:00` → true
`2007-02-23T20:14:33.079-00:00` = `2007-02-23T20:14:33.079-00:00` → true
`2007-01-01T00:00-00:00` = `2007-01-01T00:00-00:00` → true
`2007-01-01T00:00-00:00` = `2007-01-01T` → true
`2007-01-01T00:00-00:00` = `2007-01-01T` → true
`2007-01-01T00:00-00:00` = `2007-01T` → true
`2007-01-01T00:00-00:00` = `2007T` → true
`2007-01-01T` = `2007-01-01T00:00-00:00` → true
`2007-01-01T` = `2007-01-01T` → true
`2007-01-01T` = `2007-01-01T` → true
`2007-01-01T` = `2007-01T` → true
`2007-01-01T` = `2007T` → true
`2007-01-01T` = `2007-01-01T00:00-00:00` → true
`2007-01-01T` = `2007-01-01T` → true
`2007-01-01T` = `2007-01-01T` → true
`2007-01-01T` = `2007-01T` → true
`2007-01-01T` = `2007T` → true
`2007-01T` = `2007-01-01T00:00-00:00` → true
`2007-01T` = `2007-01-01T` → true
`2007-01T` = `2007-01-01T` → true
`2007-01T` = `2007-01T` → true
`2007-01T` = `2007T` → true
`2007T` = `2007-01-01T00:00-00:00` → true
`2007T` = `2007-01-01T` → true
`2007T` = `2007-01-01T` → true
`2007T` = `2007-01T` → true
`2007T` = `2007T` → true
`2007-02-23T` = `2007-02-23T` → true
`2007-02-23T` = `2007-02-23T00:00+00:00` → true
`2007-02-23T` = `2007-02-23T00:00+00:00` → true
`2007-02-23T` = `2007-02-23T00:00:00-00:00` → true
`2007-02-23T00:00+00:00` = `2007-02-23T` → true
`2007-02-23T00:00+00:00` = `2007-02-23T00:00+00:00` → true
`2007-02-23T00:00+00:00` = `2007-02-23T00:00+00:00` → true
`2007-02-23T00:00+00:00` = `2007-02-23T00:00:00-00:00` → true
`2007-02-23T00:00+00:00` = `2007-02-23T` → true
`2007-02-23T00:00+00:00` = `2007-02-23T00:00+00:00` → true
`2007-02-23T00:00+00:00` = `2007-02-23T00:00+00:00` → true
`2007-02-23T00:00+00:00` = `2007-02-23T00:00:00-00:00` → true
`2007-02-23T00:00:00-00:00` = `2007-02-23T` → true
`2007-02-23T00:00:00-00:00` = `2007-02-23T00:00+00:00` → true
`2007-02-23T00:00:00-00:00` = `2007-02-23T00:00+00:00` → true
`2007-02-23T00:00:00-00:00` = `2007-02-23T00:00:00-00:00` → true
`2007` = `2007` → true
`2000T` = `2000T` → true
`2000T` = `2000-01-01T00:00:00+00:00` → true
`2000-01-01T00:00:00+00:00` = `2000T` → true
`2000-01-01T00:00:00+00:00` = `2000-01-01T00:00:00+00:00` → true
`2000-01-01T00:00:00.000+00:00` = `2000-01-01T00:00:00.000+00:00` → true
`2000-01-01T00:00:00.000+00:00` = `2000-01-01T00:00:00.000-00:00` → true
`2000-01-01T00:00:00.000-00:00` = `2000-01-01T00:00:00.000+00:00` → true
`2000-01-01T00:00:00.000-00:00` = `2000-01-01T00:00:00.000-00:00` → true
`""` = `""` → true
`" my string "` = `" my string "` → true
`"\""` = `"\""` → true
`"ꯍ"` = `"ꯍ"` → true
`xml::"<e a=\'v\'>c<\/e>"` = `xml::"<e a=\'v\'>c<\/e>"` → true
`("hello world!")` = `("hello world!")` → true
`("hello world!")` = `("hello world!")` → true
`("hello world!")` = `("hello world!")` → true
`("hello world!")` = `("hello world!")` → true
`"The first line of the string.\nThis is the second line of the string,\nand this is the third line.\n"` = `"The first line of the string.\nThis is the second line of the string,\nand this is the third line.\n"` → true
`myVar2` = `myVar2` → true
`myVar2` = `myVar2` → true
`myVar2` = `myVar2` → true
`myVar2` = `myVar2` → true
`myvar2` = `myvar2` → true
`'hi ho'` = `'hi ho'` → true
`'\'ahoy\''` = `'\'ahoy\''` → true
`''` = `''` → true
`(x '+' y)` = `(x '+' y)` → true
`(x '+' y)` = `(x '+' y)` → true
`(x '+' y)` = `(x '+' y)` → true
`(x '+' y)` = `(x '+' y)` → true
`(x '+' y)` = `(x '+' y)` → true
`(x '+' y)` = `(x '+' y)` → true
`(x '+' y)` = `(x '+' y)` → true
`(x '+' y)` = `(x '+' y)` → true
`(x '+' y)` = `(x '+' y)` → true
`(a '==' b '&&' c '==' d)` = `(a '==' b '&&' c '==' d)` → true
`{{+AB/}}` = `{{+AB/}}` → true
`{{VG8gaW5maW5pdHkuLi4gYW5kIGJleW9uZCE=}}` = `{{VG8gaW5maW5pdHkuLi4gYW5kIGJleW9uZCE=}}` → true
`{{dHdvIHBhZGRpbmcgY2hhcmFjdGVycw==}}` = `{{dHdvIHBhZGRpbmcgY2hhcmFjdGVycw==}}` → true
`{{"This is a CLOB of text."}}` = `{{"This is a CLOB of text."}}` → true
`shift_jis::{{"Another clob with user-defined encoding, this time on multiple lines."}}` = `shift_jis::{{"Another clob with user-defined encoding, this time on multiple lines."}}` → true
`{}` = `{}` → true
`{first: "Tom", last: "Riddle"}` = `{first: "Tom", last: "Riddle"}` → true
`{first: "Tom", last: "Riddle"}` = `{first: "Tom", last: "Riddle"}` → true
`{first: "Tom", last: "Riddle"}` = `{first: "Tom", last: "Riddle"}` → true
`{first: "Tom", last: "Riddle"}` = `{first: "Tom", last: "Riddle"}` → true
`{center: {x: 1.0, y: 12.5}, radius: 3}` = `{center: {x: 1.0, y: 12.5}, radius: 3}` → true
`{x: 1}` = `{x: 1}` → true
`{'': 42}` = `{'': 42}` → true
`{x: 1, x: null.int}` = `{x: 1, x: null.int}` → true
`{field_name: annotation::value}` = `{field_name: annotation::value}` → true
`[]` = `[]` → true
`[1, 2, 3]` = `[1, 2, 3]` → true
`[1, two]` = `[1, two]` → true
`[a, [b]]` = `[a, [b]]` → true
`[1.2]` = `[1.2]` → true
`()` = `()` → true
`(cons 1 2)` = `(cons 1 2)` → true
`([hello] [there])` = `([hello] [there])` → true
`(a '+-' b)` = `(a '+-' b)` → true
`(a '+-' b)` = `(a '+-' b)` → true
`(a '+-' b)` = `(a '+-' b)` → true
`(a '+-' b)` = `(a '+-' b)` → true
`(a '.' b ';')` = `(a '.' b ';')` → true
`(a '.' b ';')` = `(a '.' b ';')` → true
`(a '.' b ';')` = `(a '.' b ';')` → true
`(a '.' b ';')` = `(a '.' b ';')` → true
`(a b)` = `(a b)` → true
`(a '\/*' word '*\/' b)` = `(a '\/*' word '*\/' b)` → true
`int32::12` = `int32::12` → true
`degrees::celsius::100` = `degrees::celsius::100` → true
`'my.custom.type'::{x: 12, y: -1}` = `'my.custom.type'::{x: 12, y: -1}` → true
`{field: some_annotation::value}` = `{field: some_annotation::value}` → true
`''::1` = `''::1` → true
